# fossology

./: .clang-format  .dockerignore  .editorconfig  .env  .env.apache2-conf-file  .env.example  .env.external-auth  .gitattributes  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  CHANGELOG.md  CHANGES.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DIAGNOSIS_REPORT.md  Dockerfile  GENSEARCHDATA  HACKING  INSTALL  INSTALL.multi  INSTALL_REQUIREMENTS.md  LICENSE  Makefile  Makefile.conf  Makefile.deps  Makefile.process  NOTICES  NOTICES-THIRDPARTY.html  NOTICES.spdx  Notes  README  README.ARM64.md  README.md  README.reuser_agent.md  RdfXml.php.patch  STRINGS.in  (+39 more)
install/: CMakeLists.txt  INSTALL  INSTALL.multi  INSTALL.ssl  Makefile  docker-compose.Dockerfile  docker-compose.base.yml  docker-compose.docker-entrypoint.sh  docker-compose.yml  easy-install  fo-apache-example.conf  fo-apache.conf  fo-install-pythondeps  fo-postinstall.in  fo_dbcheck.php  fossinit-common.php  fossinit.php  license_ref_utils.php  src-install-apache-example.conf
install/config-scripts/: fo-backup-S3.sh  fo-config-common.sh  fo-config-db.in  fo-config-scheduler.in  fo-config-web.in  fo-config_add-custom-licenses.sh  fo-config_remove-default-user.sh  fo-config_set-banner.sh  fo-config_set-keywords.in  fo-config_smtp.sh
install/db/: Makefile  cmu-mach-migration.sql  db.cron.in  dbcreate.in  dbmigrate_1.4-2.0.php  dbmigrate_2.0-2.1.php  dbmigrate_2.0-2.5-pre.php  dbmigrate_2.1-2.2.php  dbmigrate_2.5-2.6.php  dbmigrate_2.6-2.7.php  dbmigrate_3.3-3.4.php  dbmigrate_3.5-3.6.php  dbmigrate_3.6-3.7.php  dbmigrate_3.7-3.8.php  dbmigrate_4.0-4.1.php  dbmigrate_4.2-4.3.php  dbmigrate_4.3-4.4.php  dbmigrate_4.6-4.7.php  dbmigrate_bulk_license.php  dbmigrate_change_db_encoding.php.in  dbmigrate_clearing-event.php  dbmigrate_cmu-mach.php  dbmigrate_copyright-author.php  dbmigrate_copyright-event.php  dbmigrate_drop_md5-license_ref.php  dbmigrate_licensedb_compatibility.php  dbmigrate_multiple_copyright_decisions.php  dbmigrate_pfile_calculate_sha256.php.in  dbmigrate_real-parent.php  dbmigrate_scm.php  export_license_ref.php  fo_mapping_license.php  fossologyinit.sql  gitpod-fossologyinit.sql  initdb-extensions.sh  instance_uuid.php  licenseRef.json  licenseref.sql  migratetest.php  psql-connect.sh  (+2 more)
install/defconf/: Db.conf.in  Db.conf.in.license  VERSION.in  fossology.conf.in  samplefooter.txt  sampleheader.txt
install/fossdash/: fossdash-publish.py.in  fossdash_dep_install.sh  fossdash_metrics.yml
install/scripts/: check-fossology-config.sh  install-atarashi.sh  install-json-hpp.sh  install-ninka.sh  install-spdx-tools.sh  pgsql-conf-fix.sh  php-conf-fix.sh  readme  scripts.tar  setshm.sh
src/: CMakeLists.txt  Makefile  composer.json  composer.json.in  dox.c  fossy-ruleset.xml  phpunit-bootstrap.php  phpunit.82.xml  phpunit.xml
src/Overwatch/: go.work
src/adj2nest/: CMakeLists.txt  Makefile  adj2nest.conf
src/atarashi/: CMakeLists.txt  Makefile  README.md  atarashi.conf  atarashiWrapper.conf  install-atarashi.sh  mod_deps
src/bsam/: Makefile
src/buckets/: CMakeLists.txt  Makefile  buckets.conf  mod_deps
src/cli/: CMakeLists.txt  Makefile  acme_review.php  cp2foss.php  cp2foss.pod  exportLicenseRefUsingSPDX.php  fo_antelink.php  fo_bucket_list.php  fo_chmod.php  fo_copyright_list.php  fo_folder.php  fo_import_licenses.php  fo_monk_license_list.php  fo_ninka_license_list.php  fo_nomos_license_list.php  fo_notify.php  fo_tagfile.php  fo_tagfoss.php  fo_usergroup.php  fo_wrapper.php  fo_wrapper.php.in  foss-scheduler.pod  fossinit.php  fossjobs.php  fossjobs.pod  fossupload_status.php  libschema.php  mkpod  schema-export.php  schema-update.php
src/clixml/: CMakeLists.txt  Makefile  clixml.conf
src/compatibility/: CMakeLists.txt  README.md  compatibility.conf  mod_deps
src/containeragent/: CMakeLists.txt  containeragent.conf  mod_deps
src/copyright/: .gitignore  CMakeLists.txt  Makefile  copyright.conf  ecc.conf  ip.conf  ipra.conf  keyword.conf  mod_deps
src/cyclonedx/: CMakeLists.txt  cyclonedx.conf
src/debug/: CMakeLists.txt  Makefile
src/decider/: CMakeLists.txt  Makefile  decider.conf  mod_deps_py
src/deciderjob/: CMakeLists.txt  Makefile  deciderjob.conf
src/decisionexporter/: CMakeLists.txt  decisionexporter.conf
src/decisionimporter/: CMakeLists.txt  decisionimporter.conf
src/delagent/: CMakeLists.txt  Makefile  delagent.conf  mod_deps
src/demomod/: CMakeLists.txt  Makefile  README  VERSION  demomod.conf  mod_deps
src/example_wc_agent/: CMakeLists.txt  Makefile  example_wc_agent.conf
src/genvendor/: CMakeLists.txt  ComposerInstall
src/gozilla/: go.mod  go.sum
src/kotoba/: CMakeLists.txt  kotoba.conf  kotobabulk.conf
src/lib/: CMakeLists.txt  Makefile
src/maintagent/: CMakeLists.txt  Makefile  README.md  VERSION  maintagent.conf  mod_deps
src/maintagent2/: CMakeLists.txt  README.md
src/mimetype/: CMakeLists.txt  Makefile  mimetype.conf  mod_deps
src/mlscan/: CMakeLists.txt  DEVELOPER.md  README.md  TESTING.md  USER_GUIDE.md  install_deps.sh  mlscan.conf  mod_deps  test.sh
src/monk/: CMakeLists.txt  Makefile  kotoba.conf  monk.conf  monkbulk.conf
src/ninka/: CMakeLists.txt  Makefile  README.md  mod_deps  ninka.conf
src/nomos/: CMakeLists.txt  Makefile  README.md  VERSION  mod_deps  nomos.conf
src/ojo/: CMakeLists.txt  Makefile  README.md  mod_deps  ojo.conf
src/ossdetect/: CMakeLists.txt  PREVIEW_GUIDE.md  README.md  READY_FOR_PR.md  SUMMARY.md  TESTING.md  VISUAL_WALKTHROUGH.md  mod_deps  ossdetect.conf
src/patches/: easyrdf-php84-xml-parser-fix.patch
src/pkgagent/: CMakeLists.txt  Makefile  mod_deps  pkgagent.conf
src/readMeOss/: Makefile  readMeOssAgent.conf
src/readmeoss/: CMakeLists.txt  Makefile  readmeoss.conf
src/regexscan/: CMakeLists.txt  Makefile  mod_deps  regexscan.conf
src/report/: Makefile  report.conf
src/reportImport/: CMakeLists.txt  Makefile  reportImport.conf
src/reportgen/: Makefile  reportgen.conf
src/reso/: CMakeLists.txt  Makefile  reso.conf
src/reuser/: CMakeLists.txt  Makefile  (+3 more)
(+7955 files in other folders)
