cmake_minimum_required(VERSION 2.8.4)
project(fossology)

include_directories(
    ${fossology_SOURCE_DIR}/src/lib/c
    ${fossology_SOURCE_DIR}/src/lib/cpp
)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra -Weffc++")

set(SOURCE_FILES
    src/adj2nest/agent/adj2nest.c
    src/buckets/agent/buckets.c
    src/buckets/agent/buckets.h
    src/buckets/agent/child.c
    src/buckets/agent/container.c
    src/buckets/agent/inits.c
    src/buckets/agent/leaf.c
    src/buckets/agent/liccache.c
    src/buckets/agent/liccache.h
    src/buckets/agent/match.c
    src/buckets/agent/validate.c
    src/buckets/agent/walk.c
    src/buckets/agent/write.c
    src/copyright/agent/cleanEntries.cc
    src/copyright/agent/cleanEntries.hpp
    src/copyright/agent/copyright.cc
    src/copyright/agent/copyright.hpp
    src/copyright/agent/copyrightMatch.cc
    src/copyright/agent/copyrightMatch.hpp
    src/copyright/agent/copyrightState.cc
    src/copyright/agent/copyrightState.hpp
    src/copyright/agent/copyrightUtils.cc
    src/copyright/agent/copyrightUtils.hpp
    src/copyright/agent/database.cc
    src/copyright/agent/database.hpp
    src/copyright/agent/identity.hpp
    src/copyright/agent/matcher.cc
    src/copyright/agent/matcher.hpp
    src/copyright/agent/regex.hpp
    src/copyright/agent/regexMatcher.cc
    src/copyright/agent/regexMatcher.hpp
    src/copyright/agent/regTypes.cc
    src/copyright/agent/regTypes.hpp
    src/copyright/agent_tests/Unit/run_tests.cc
    src/copyright/agent_tests/Unit/test_regex.cc
    src/copyright/agent_tests/Unit/test_RegMatcher.cc
    src/delagent/agent/delagent.c
    src/delagent/agent/delagent.h
    src/delagent/agent/util.c
    src/delagent/agent_tests/Unit/testDeleteFolders.c
    src/delagent/agent_tests/Unit/testListFolders.c
    src/delagent/agent_tests/Unit/testReadParameter.c
    src/delagent/agent_tests/Unit/testRun.c
    src/delagent/agent_tests/Unit/testRun.h
    src/demomod/agent/demomod.c
    src/demomod/agent/demomod.h
    src/demomod/agent/process.c
    src/demomod/agent/usage.c
    src/demomod/agent/utils.c
    src/example_wc_agent/agent/wc_agent.c
    src/lib/c/tests/test_fossconfig.c
    src/lib/c/tests/test_fossscheduler.c
    src/lib/c/tests/test_libfossdb.c
    src/lib/c/tests/test_libfossdbmanager.c
    src/lib/c/tests/testlibs.c
    src/lib/c/fossconfig.c
    src/lib/c/fossconfig.h
    src/lib/c/fossconfigTest.c
    src/lib/c/libfossagent.c
    src/lib/c/libfossagent.h
    src/lib/c/libfossdb.c
    src/lib/c/libfossdb.h
    src/lib/c/libfossdbmanager.c
    src/lib/c/libfossdbmanager.h
    src/lib/c/libfossology.h
    src/lib/c/libfossrepo.c
    src/lib/c/libfossrepo.h
    src/lib/c/libfossscheduler.c
    src/lib/c/libfossscheduler.h
    src/lib/c/repcat.c
    src/lib/c/repcopyin.c
    src/lib/c/repexist.c
    src/lib/c/rephost.c
    src/lib/c/repmmapcheck.c
    src/lib/c/reppath.c
    src/lib/c/repremove.c
    src/lib/c/repwrite.c
    src/lib/c/sqlCopy.c
    src/lib/c/sqlCopy.h
    src/lib/c/sqlCopyTest.c
    src/lib/cpp/files.cc
    src/lib/cpp/files.hpp
    src/lib/cpp/libfossdbmanagerclass.cc
    src/lib/cpp/libfossdbmanagerclass.hpp
    src/lib/cpp/libfossologyCPP.hpp
    src/lib/cpp/uniquePtr.hpp
    src/maintagent/agent/maintagent.c
    src/maintagent/agent/maintagent.h
    src/maintagent/agent/process.c
    src/maintagent/agent/usage.c
    src/maintagent/agent/utils.c
    src/mimetype/agent/finder.c
    src/mimetype/agent/finder.h
    src/mimetype/agent/mimetype.c
    src/mimetype/agent_tests/Unit/finder/testDBCheckMime.c
    src/mimetype/agent_tests/Unit/finder/testDBFindMime.c
    src/mimetype/agent_tests/Unit/finder/testDBLoadMime.c
    src/mimetype/agent_tests/Unit/finder/testOtheFunctions.c
    src/mimetype/agent_tests/Unit/testRun.c
    src/mimetype/agent_tests/Unit/testRun.h
    src/monk/agent/buildSquareVisitor.c
    src/monk/agent/bulk.c
    src/monk/agent/bulk.h
    src/monk/agent/cli.c
    src/monk/agent/cli.h
    src/monk/agent/database.c
    src/monk/agent/database.h
    src/monk/agent/diff.c
    src/monk/agent/diff.h
    src/monk/agent/extended.c
    src/monk/agent/extended.h
    src/monk/agent/file_operations.c
    src/monk/agent/file_operations.h
    src/monk/agent/hash.c
    src/monk/agent/hash.h
    src/monk/agent/highlight.c
    src/monk/agent/highlight.h
    src/monk/agent/license.c
    src/monk/agent/license.h
    src/monk/agent/match.c
    src/monk/agent/match.h
    src/monk/agent/monk.c
    src/monk/agent/monk.h
    src/monk/agent/string_operations.c
    src/monk/agent/string_operations.h
    src/monk/agent_tests/Unit/run_tests.c
    src/monk/agent_tests/Unit/test_database.c
    src/monk/agent_tests/Unit/test_diff.c
    src/monk/agent_tests/Unit/test_extended.c
    src/monk/agent_tests/Unit/test_file_operations.c
    src/monk/agent_tests/Unit/test_hash.c
    src/monk/agent_tests/Unit/test_highlight.c
    src/monk/agent_tests/Unit/test_license.c
    src/monk/agent_tests/Unit/test_match.c
    src/monk/agent_tests/Unit/test_string_operations.c
    src/monk/agent_tests/Unit/utils.c
    src/monk/agent_tests/Unit/utils.h
    src/nomos/agent/_autodata.c
    src/nomos/agent/_autodefs.h
    src/nomos/agent/_precheck.c
    src/nomos/agent/DMalloc.c
    src/nomos/agent/DMalloc.h
    src/nomos/agent/doctorBuffer_utils.c
    src/nomos/agent/doctorBuffer_utils.h
    src/nomos/agent/encode.c
    src/nomos/agent/licenses.c
    src/nomos/agent/licenses.h
    src/nomos/agent/list.c
    src/nomos/agent/list.h
    src/nomos/agent/nomos.c
    src/nomos/agent/nomos.h
    src/nomos/agent/nomos_gap.c
    src/nomos/agent/nomos_gap.h
    src/nomos/agent/nomos_regex.c
    src/nomos/agent/nomos_regex.h
    src/nomos/agent/nomos_utils.c
    src/nomos/agent/nomos_utils.h
    src/nomos/agent/parse.c
    src/nomos/agent/parse.h
    src/nomos/agent/process.c
    src/nomos/agent/process.h
    src/nomos/agent/standalone.c
    src/nomos/agent/standalone.h
    src/nomos/agent/util.c
    src/nomos/agent/util.h
    src/nomos/agent_tests/testdata/NomosTestfiles/Apache/condor_blkng_full_disk_io.h
    src/nomos/agent_tests/testdata/NomosTestfiles/APSL/DNSDigest.c
    src/nomos/agent_tests/testdata/NomosTestfiles/Artistic/a2p.c
    src/nomos/agent_tests/testdata/NomosTestfiles/Artistic/macos_main.cpp
    src/nomos/agent_tests/testdata/NomosTestfiles/BSD/app_exec.c
    src/nomos/agent_tests/testdata/NomosTestfiles/BSD/autoopts.c
    src/nomos/agent_tests/testdata/NomosTestfiles/BSD/basename.c
    src/nomos/agent_tests/testdata/NomosTestfiles/BSD/bug3537_DNSDigest.c
    src/nomos/agent_tests/testdata/NomosTestfiles/BSD/chpst.c
    src/nomos/agent_tests/testdata/NomosTestfiles/BSD/cidr.c
    src/nomos/agent_tests/testdata/NomosTestfiles/BSD/destest.c
    src/nomos/agent_tests/testdata/NomosTestfiles/BSD/dlfcn.h
    src/nomos/agent_tests/testdata/NomosTestfiles/BSD/drand48.c
    src/nomos/agent_tests/testdata/NomosTestfiles/BSD/Epl.h
    src/nomos/agent_tests/testdata/NomosTestfiles/BSD/fft4g.c
    src/nomos/agent_tests/testdata/NomosTestfiles/BSD/inetd.c
    src/nomos/agent_tests/testdata/NomosTestfiles/BSD/podd.h
    src/nomos/agent_tests/testdata/NomosTestfiles/BSD/s_erf.c
    src/nomos/agent_tests/testdata/NomosTestfiles/BSD/snprintf.c
    src/nomos/agent_tests/testdata/NomosTestfiles/BSD/sparse_crc32.c
    src/nomos/agent_tests/testdata/NomosTestfiles/BSD/tclLoadAix.c
    src/nomos/agent_tests/testdata/NomosTestfiles/BSD/win_ce_semaphore.c
    src/nomos/agent_tests/testdata/NomosTestfiles/BSL/graphviz_digraph_lex.cpp
    src/nomos/agent_tests/testdata/NomosTestfiles/BSL/intel.hpp
    src/nomos/agent_tests/testdata/NomosTestfiles/CC/accessstate.h
    src/nomos/agent_tests/testdata/NomosTestfiles/CC/bltsville.h
    src/nomos/agent_tests/testdata/NomosTestfiles/CC/boot_config.h
    src/nomos/agent_tests/testdata/NomosTestfiles/CC/config.h
    src/nomos/agent_tests/testdata/NomosTestfiles/CC/configwords.h
    src/nomos/agent_tests/testdata/NomosTestfiles/CC/DS_HuffmanEncodingTreeNode.h
    src/nomos/agent_tests/testdata/NomosTestfiles/CC/GCOneShotEffectTimer.h
    src/nomos/agent_tests/testdata/NomosTestfiles/CC/ifiction.h
    src/nomos/agent_tests/testdata/NomosTestfiles/CC/license.h
    src/nomos/agent_tests/testdata/NomosTestfiles/CC/malloc.h
    src/nomos/agent_tests/testdata/NomosTestfiles/CC/memory_map.h
    src/nomos/agent_tests/testdata/NomosTestfiles/CC/netbsd.h
    src/nomos/agent_tests/testdata/NomosTestfiles/CC/setup.h
    src/nomos/agent_tests/testdata/NomosTestfiles/CCLRC/cdunifpp_check.c
    src/nomos/agent_tests/testdata/NomosTestfiles/CDDL/doctext.h
    src/nomos/agent_tests/testdata/NomosTestfiles/CDDL/vnode.h
    src/nomos/agent_tests/testdata/NomosTestfiles/CECILL/CImg.h
    src/nomos/agent_tests/testdata/NomosTestfiles/CECILL/dataset_io.h
    src/nomos/agent_tests/testdata/NomosTestfiles/CECILL/qapplication_proxy.cpp
    src/nomos/agent_tests/testdata/NomosTestfiles/ClArtistic/SaveAbleCollection.cpp
    src/nomos/agent_tests/testdata/NomosTestfiles/ClearSilver/csparse.c
    src/nomos/agent_tests/testdata/NomosTestfiles/CUA-OPL/cua_office_t1.c
    src/nomos/agent_tests/testdata/NomosTestfiles/DPTC/dpt_osdutil.h
    src/nomos/agent_tests/testdata/NomosTestfiles/Dual-license/aes.h
    src/nomos/agent_tests/testdata/NomosTestfiles/Dual-license/ashmem.h
    src/nomos/agent_tests/testdata/NomosTestfiles/Dual-license/asn1.c
    src/nomos/agent_tests/testdata/NomosTestfiles/Dual-license/fuse_kernel.h
    src/nomos/agent_tests/testdata/NomosTestfiles/Dual-license/Identity_daemon.c
    src/nomos/agent_tests/testdata/NomosTestfiles/Dual-license/lzf.c
    src/nomos/agent_tests/testdata/NomosTestfiles/Dual-license/plc.h
    src/nomos/agent_tests/testdata/NomosTestfiles/Dual-license/qhttp.cpp
    src/nomos/agent_tests/testdata/NomosTestfiles/Dual-license/smb.h
    src/nomos/agent_tests/testdata/NomosTestfiles/Dual-license/xpmr.h
    src/nomos/agent_tests/testdata/NomosTestfiles/ECL/bufftest.c
    src/nomos/agent_tests/testdata/NomosTestfiles/ECL/qt_sbtl_embedder.h
    src/nomos/agent_tests/testdata/NomosTestfiles/EFL/epanel.h
    src/nomos/agent_tests/testdata/NomosTestfiles/EFL/wel_image_list.h
    src/nomos/agent_tests/testdata/NomosTestfiles/EPL/egPrerequisites.h
    src/nomos/agent_tests/testdata/NomosTestfiles/EPL/filterscallbacks.h
    src/nomos/agent_tests/testdata/NomosTestfiles/ErlPL/decode_skip.h
    src/nomos/agent_tests/testdata/NomosTestfiles/EUDatagrid/scar_log.h
    src/nomos/agent_tests/testdata/NomosTestfiles/EUPL/simRender.h
    src/nomos/agent_tests/testdata/NomosTestfiles/FTL/freetype.h
    src/nomos/agent_tests/testdata/NomosTestfiles/FTL/gxvfgen.c
    src/nomos/agent_tests/testdata/NomosTestfiles/GFDL/license2.h
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/argparse.c
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/bitfield.h
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/cfg.c
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/CFontz-charmap.h
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/clisp.cxx
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/cmdedit.c
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/ConfigEnv.h
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/curve.c
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/dialogboundvalues.h
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/evd-pki-pubkey-lic.c
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/ext4_jbd2.h
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/fnmatch.h
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/frogr-picture-loader.h
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/frogr-util.c
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/gids.c
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/gnu-md5.c
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/grecord.cpp
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/gtkmovelist.c
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/gwymath.c
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/m_knock.c
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/nf_conntrack_h323_asn1.h
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/parser.c
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/passdb.c
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/ps_inspect.c
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/radrealms.c
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/RelParser.cpp
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/save_particles_Point3D_format.h
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/stddef.h
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/stdvga.c
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/sys-ecos.c
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/taskset.c
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/test-file-4-GPL-2.0.c
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/Timestamp.cc
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/ttl.h
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/version.c
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/webserver.h
    src/nomos/agent_tests/testdata/NomosTestfiles/GPL/zconf.tab.c
    src/nomos/agent_tests/testdata/NomosTestfiles/gSOAP/wsdx.h
    src/nomos/agent_tests/testdata/NomosTestfiles/info-zip/unzip.c
    src/nomos/agent_tests/testdata/NomosTestfiles/IPL/license.c
    src/nomos/agent_tests/testdata/NomosTestfiles/JISP/Maze.h
    src/nomos/agent_tests/testdata/NomosTestfiles/Leptonica/affine_reg.c
    src/nomos/agent_tests/testdata/NomosTestfiles/LGPL/autoopts.c
    src/nomos/agent_tests/testdata/NomosTestfiles/LGPL/Deflater.hxx
    src/nomos/agent_tests/testdata/NomosTestfiles/LGPL/evd-pki-pubkey.c
    src/nomos/agent_tests/testdata/NomosTestfiles/LGPL/fsp-parser.h
    src/nomos/agent_tests/testdata/NomosTestfiles/LGPL/io-jpeg.c
    src/nomos/agent_tests/testdata/NomosTestfiles/LGPL/main.cpp
    src/nomos/agent_tests/testdata/NomosTestfiles/LGPL/tracker-class.c
    src/nomos/agent_tests/testdata/NomosTestfiles/LGPL/valaprojectgenerator.c
    src/nomos/agent_tests/testdata/NomosTestfiles/LIBGCJ/natStringBuilder.cc
    src/nomos/agent_tests/testdata/NomosTestfiles/MIT/edit.c
    src/nomos/agent_tests/testdata/NomosTestfiles/MIT/ge_console.h
    src/nomos/agent_tests/testdata/NomosTestfiles/MIT/net.c
    src/nomos/agent_tests/testdata/NomosTestfiles/MIT/Netizen.cc
    src/nomos/agent_tests/testdata/NomosTestfiles/MIT/privates.h
    src/nomos/agent_tests/testdata/NomosTestfiles/MIT/watch.c
    src/nomos/agent_tests/testdata/NomosTestfiles/No_license_found/ipl.h
    src/nomos/agent_tests/testdata/NomosTestfiles/Nvidia/atom.c
    src/nomos/agent_tests/testdata/NomosTestfiles/OpenSSL/gost89.c
    src/nomos/agent_tests/testdata/NomosTestfiles/Postfix/master_spawn.c
    src/nomos/agent_tests/testdata/NomosTestfiles/Public-domain/dirent.c
    src/nomos/agent_tests/testdata/NomosTestfiles/Public-domain/fitblk.c
    src/nomos/agent_tests/testdata/NomosTestfiles/Public-domain/LzmaDec.c
    src/nomos/agent_tests/testdata/NomosTestfiles/Public-domain/nwlib.c
    src/nomos/agent_tests/testdata/NomosTestfiles/Public-domain/zpipe.c
    src/nomos/agent_tests/testdata/NomosTestfiles/QT/printview.cpp
    src/nomos/agent_tests/testdata/NomosTestfiles/See-doc/catalog.h
    src/nomos/agent_tests/testdata/NomosTestfiles/See-doc/command.h
    src/nomos/agent_tests/testdata/NomosTestfiles/See-doc/http.h
    src/nomos/agent_tests/testdata/NomosTestfiles/See-doc/lualib.h
    src/nomos/agent_tests/testdata/NomosTestfiles/See-doc/mic.h
    src/nomos/agent_tests/testdata/NomosTestfiles/See-doc/xmlsec.c
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/ad_testfs_close.c
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/bzip2.c
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/camd_dump.c
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/connection.h
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/dimoopx.cc
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/fetmainform.cpp
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/findme.c
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/FlGui.cpp
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/gdcmServiceClassUser.cxx
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/itkAffineTransform.h
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/jcparam.c
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/json.c
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/ldapmodule.c
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/main.c
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/mhstatus.c
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/mmu_context.c
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/MPIController.cxx
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/perf_event.c
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/play.h
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/pngget.c
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/popt_options.h
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/qla_version.h
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/qlcnic_ctx.c
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/qlge.h
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/revoco.h
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/rtctype.h
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/sel_util.c
    src/nomos/agent_tests/testdata/NomosTestfiles/See-file/util.h
    src/nomos/agent_tests/testdata/NomosTestfiles/SGI/gl2.h
    src/nomos/agent_tests/testdata/NomosTestfiles/Trademark-ref/53c7xx.c
    src/nomos/agent_tests/testdata/NomosTestfiles/UnclassifiedLicense/IPA.cpp
    src/nomos/agent_tests/testdata/NomosTestfiles/UnclassifiedLicense/isc.h
    src/nomos/agent_tests/testdata/NomosTestfiles/UnclassifiedLicense/net_phy_def.h
    src/nomos/agent_tests/testdata/NomosTestfiles/Vixie/user.c
    src/nomos/agent_tests/testdata/NomosTestfiles/WebM/alpha.c
    src/nomos/agent_tests/testdata/NomosTestfiles/WTFPL/random.h
    src/nomos/agent_tests/testdata/NomosTestfiles/WTFPL/wtfpl.c
    src/nomos/agent_tests/testdata/NomosTestfiles/WXwindows/setup.h
    src/nomos/agent_tests/testdata/NomosTestfiles/Zlib/blast.c
    src/nomos/agent_tests/testdata/NomosTestfiles/Zlib/util.cpp
    src/nomos/agent_tests/testdata/NomosTestfiles/Zlib/zutil.h
    src/nomos/agent_tests/Unit/run_tests.c
    src/nomos/agent_tests/Unit/test_DoctoredBuffer.c
    src/nomos/agent_tests/Unit/test_nomos_gap.c
    src/pkgagent/agent/main.c
    src/pkgagent/agent/pkgagent.c
    src/pkgagent/agent/pkgagent.h
    src/pkgagent/agent_tests/Unit/testGetFieldValue.c
    src/pkgagent/agent_tests/Unit/testGetMetadata.c
    src/pkgagent/agent_tests/Unit/testGetMetadataDebBinary.c
    src/pkgagent/agent_tests/Unit/testGetMetadataDebSource.c
    src/pkgagent/agent_tests/Unit/testRecordMetadataDEB.c
    src/pkgagent/agent_tests/Unit/testRecordMetadataRPM.c
    src/pkgagent/agent_tests/Unit/testRun.c
    src/pkgagent/agent_tests/Unit/testTrim.c
    src/regexscan/agent/regexscan-Stage1.c
    src/regexscan/agent/regexscan-Stage2.c
    src/regexscan/agent/regexscan-Stage3.c
    src/regexscan/agent/regexscan.c
    src/reportgen/agent/jsonDataRetriever.c
    src/reportgen/agent/jsonDataRetriever.h
    src/reportgen/agent/main.c
    src/reportgen/agent/main.h
    src/reportgen/agent/table.c
    src/reportgen/agent/table.h
    src/reportgen/agent/utils.c
    src/reportgen/agent/utils.h
    src/scheduler/agent/agent.c
    src/scheduler/agent/agent.h
    src/scheduler/agent/database.c
    src/scheduler/agent/database.h
    src/scheduler/agent/event.c
    src/scheduler/agent/event.h
    src/scheduler/agent/fo_cli.c
    src/scheduler/agent/fo_scheduler.c
    src/scheduler/agent/host.c
    src/scheduler/agent/host.h
    src/scheduler/agent/interface.c
    src/scheduler/agent/interface.h
    src/scheduler/agent/job.c
    src/scheduler/agent/job.h
    src/scheduler/agent/logging.c
    src/scheduler/agent/logging.h
    src/scheduler/agent/scheduler.c
    src/scheduler/agent/scheduler.h
    src/scheduler/agent/sqlstatements.h
    src/scheduler/agent_tests/agents/before_connect.c
    src/scheduler/agent_tests/agents/db_connect.c
    src/scheduler/agent_tests/agents/multi_connect.c
    src/scheduler/agent_tests/agents/no_check.c
    src/scheduler/agent_tests/agents/no_disconnect.c
    src/scheduler/agent_tests/agents/no_update.c
    src/scheduler/agent_tests/agents/quick_death.c
    src/scheduler/agent_tests/agents/simple.c
    src/scheduler/agent_tests/agents/wait_special.c
    src/scheduler/agent_tests/Unit/testAgent.c
    src/scheduler/agent_tests/Unit/testDatabase.c
    src/scheduler/agent_tests/Unit/testEvent.c
    src/scheduler/agent_tests/Unit/testHost.c
    src/scheduler/agent_tests/Unit/testInterface.c
    src/scheduler/agent_tests/Unit/testJob.c
    src/scheduler/agent_tests/Unit/testRun.c
    src/scheduler/agent_tests/Unit/testRun.h
    src/scheduler/agent_tests/Unit/testScheduler.c
    src/testing/dataFiles/TestData/licenses/DNSDigest.c
    src/testing/db/c/libfodbreposysconf.c
    src/testing/db/c/libfodbreposysconf.h
    src/testing/lib/c/libfocunit.c
    src/testing/lib/c/libfocunit.h
    src/ununpack/agent/checksum.c
    src/ununpack/agent/checksum.h
    src/ununpack/agent/departition.c
    src/ununpack/agent/externs.h
    src/ununpack/agent/md5.c
    src/ununpack/agent/md5.h
    src/ununpack/agent/sha1.c
    src/ununpack/agent/sha1.h
    src/ununpack/agent/traverse.c
    src/ununpack/agent/ununpack-ar.c
    src/ununpack/agent/ununpack-ar.h
    src/ununpack/agent/ununpack-disk.c
    src/ununpack/agent/ununpack-disk.h
    src/ununpack/agent/ununpack-iso.c
    src/ununpack/agent/ununpack-iso.h
    src/ununpack/agent/ununpack.c
    src/ununpack/agent/ununpack.h
    src/ununpack/agent/ununpack_globals.h
    src/ununpack/agent/utils.c
    src/ununpack/agent_tests/Functional/test_TraverseUnunpackEntry.c
    src/ununpack/agent_tests/Unit/run_tests.c
    src/ununpack/agent_tests/Unit/run_tests.h
    src/ununpack/agent_tests/Unit/test_Checksum.c
    src/ununpack/agent_tests/Unit/test_ContainerInfo.c
    src/ununpack/agent_tests/Unit/test_CopyFile.c
    src/ununpack/agent_tests/Unit/test_DBInsert.c
    src/ununpack/agent_tests/Unit/test_FindCmd.c
    src/ununpack/agent_tests/Unit/test_IsFunctions.c
    src/ununpack/agent_tests/Unit/test_PathCheck.c
    src/ununpack/agent_tests/Unit/test_Prune.c
    src/ununpack/agent_tests/Unit/test_RunCommand.c
    src/ununpack/agent_tests/Unit/test_TaintString.c
    src/ununpack/agent_tests/Unit/test_Traverse.c
    src/ununpack/agent_tests/Unit/test_TraverseChild.c
    src/ununpack/agent_tests/Unit/test_TraverseStart.c
    src/ununpack/agent_tests/Unit/test_ununpack-ar.c
    src/ununpack/agent_tests/Unit/test_ununpack-disk.c
    src/ununpack/agent_tests/Unit/test_ununpack-iso.c
    src/vendor/twig/twig/ext/twig/php_twig.h
    src/vendor/twig/twig/ext/twig/twig.c
    src/wget_agent/agent/main.c
    src/wget_agent/agent/wget_agent.c
    src/wget_agent/agent/wget_agent.h
    src/wget_agent/agent_tests/Unit/wget_agent/testDBLoadGold.c
    src/wget_agent/agent_tests/Unit/wget_agent/testGetURL.c
    src/wget_agent/agent_tests/Unit/wget_agent/testSetEnv.c
    src/wget_agent/agent_tests/Unit/wget_agent/testUtilities.c
    src/wget_agent/agent_tests/Unit/testRun.c
    src/wget_agent/agent_tests/Unit/testRun.h
    src/wget_agent/agent_tests/Unit/utility.c
    src/wget_agent/agent_tests/Unit/utility.h
    src/dox.c)

add_executable(fossology ${SOURCE_FILES})